<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEvent" >

    <EditText
        android:id="@+id/newEvent"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/eventNameHint"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/action"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/newEvent"
        android:layout_below="@+id/newEvent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/action"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/silent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silent"
            android:checked="true"
            android:textColor="#000000"
            android:textSize="16sp" /> 
    </RadioGroup>

    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/action"
        android:layout_below="@+id/radio"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/location"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/locationButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pickLocation"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/fromMap"
            android:textSize="12sp" />

        <Button
            android:id="@+id/currentLocation"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_toRightOf="@id/pickLocation"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/currentLocation"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <EditText
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/latitudeHint"
       	android:layout_below="@id/locationButtons"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/longitudeHint"
        android:layout_below="@id/latitude"
        android:paddingLeft="4dp"
        android:textColor="#000000"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitude"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="12sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_toRightOf="@id/save"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>